--- a/1-italapok/gen.html
+++ b/1-italapok/gen.html
@@ -64,34 +64,34 @@
 
         <p><strong>1. ENIAC (Electronic Numerical Integrator and Computer)</strong></p>
         <ul>
-          <li>Bemutatás éve: 1946</li>
-          <li>Helyszín: University of Pennsylvania, USA</li>
-          <li>Fejlesztők: John Presper Eckert és John Mauchly</li>
-          <p>Jelentőség: Az ENIAC volt az első általános célú, elektronikus számítógép, amely képes volt különböző típusú számítások elvégzésére. Elsősorban ballisztikai táblázatok készítésére használták a hadsereg számára, de az ENIAC-ot később más területeken is alkalmazták. A gép több mint 17 000 vákuumcsövet tartalmazott, és több száz négyzetméternyi helyet foglalt el.</p>
+          <li><strong>Bemutatás éve:</strong> 1946</li>
+          <li><strong>Helyszín:</strong> University of Pennsylvania, USA</li>
+          <li><strong>Fejlesztők:</strong> John Presper Eckert és John Mauchly</li>
+          <li><strong>Jelentőség:</strong> Az ENIAC volt az első általános célú, elektronikus számítógép, amely képes volt különböző típusú számítások elvégzésére. Elsősorban ballisztikai táblázatok készítésére használták a hadsereg számára, de az ENIAC-ot később más területeken is alkalmazták. A gép több mint 17 000 vákuumcsövet tartalmazott, és több száz négyzetméternyi helyet foglalt el.</li>
         </ul>
 
         <p><strong>2. EDVAC (Electronic Discrete Variable Automatic Computer)</strong></p>
         <ul>
-          <li>Bemutatás éve: 1951</li>
-          <li>Helyszín: USA</li>
-          <li>Fejlesztők: John von Neumann és mások</li>
-          <li>Jelentőség: Az EDVAC az első számítógép, amely a Neumann-elvek szerint működött, vagyis tárolt programú volt. Ez azt jelentette, hogy a program és az adatok ugyanabban a memóriában tárolódtak, ami sokkal rugalmasabb és hatékonyabb működést tett lehetővé. Az EDVAC tervezése során vált világossá a számítógépes architektúra alapelveinek fontossága, amelyek a mai napig meghatározzák a számítógépek felépítését.</li>
+          <li><strong>Bemutatás éve:</strong> 1951</li>
+          <li><strong>Helyszín:</strong> USA</li>
+          <li><strong>Fejlesztők:</strong> John von Neumann és mások</li>
+          <li><strong>Jelentőség:</strong> Az EDVAC az első számítógép, amely a Neumann-elvek szerint működött, vagyis tárolt programú volt. Ez azt jelentette, hogy a program és az adatok ugyanabban a memóriában tárolódtak, ami sokkal rugalmasabb és hatékonyabb működést tett lehetővé. Az EDVAC tervezése során vált világossá a számítógépes architektúra alapelveinek fontossága, amelyek a mai napig meghatározzák a számítógépek felépítését.</li>
         </ul>
 
         <p><strong>3. UNIVAC I (Universal Automatic Computer I)</strong></p>
         <ul>
-          <li>Bemutatás éve: 1951</li>
-          <li>Helyszín: USA</li>
-          <li>Fejlesztők: John Presper Eckert és John Mauchly</li>
-          <li>Jelentőség: Az UNIVAC I volt az első kereskedelmi forgalomban kapható számítógép, amelyet elsősorban üzleti és kormányzati célokra használtak. Az UNIVAC I nagy figyelmet kapott, amikor 1952-ben helyesen jósolta meg Dwight D. Eisenhower győzelmét az elnökválasztáson. Ez a gép a mai számítógépes ipar egyik előfutárának tekinthető.</li>
+          <li><strong>Bemutatás éve:</strong> 1951</li>
+          <li><strong>Helyszín:</strong> USA</li>
+          <li><strong>Fejlesztők:</strong> John Presper Eckert és John Mauchly</li>
+          <li><strong>Jelentőség:</strong> Az UNIVAC I volt az első kereskedelmi forgalomban kapható számítógép, amelyet elsősorban üzleti és kormányzati célokra használtak. Az UNIVAC I nagy figyelmet kapott, amikor 1952-ben helyesen jósolta meg Dwight D. Eisenhower győzelmét az elnökválasztáson. Ez a gép a mai számítógépes ipar egyik előfutárának tekinthető.</li>
         </ul>
 
         <p><strong>Jellemzők</strong></p>
         <ul>
-          <li>Méret: Az első generációs számítógépek hatalmasak voltak, és gyakran egész termeket foglaltak el. Tömegük több tonna volt.</li>
-          <li>Teljesítmény: Ezek a gépek viszonylag lassúak voltak a mai mércével, másodpercenként néhány ezer műveletet tudtak végrehajtani.</li>
-          <li>Megbízhatóság: A vákuumcsövek gyakori meghibásodásai miatt ezek a gépek megbízhatatlanok voltak, és gyakran karbantartást igényeltek.</li>
-          <li>Programozás: Az első generációs számítógépeket gépi nyelven programozták, ami időigényes és bonyolult folyamat volt. A programokat általában lyukkártyákon vagy papírszalagokon tárolták.</li>
+          <li><strong>Méret:</strong> Az első generációs számítógépek hatalmasak voltak, és gyakran egész termeket foglaltak el. Tömegük több tonna volt.</li>
+          <li><strong>Teljesítmény:</strong> Ezek a gépek viszonylag lassúak voltak a mai mércével, másodpercenként néhány ezer műveletet tudtak végrehajtani.</li>
+          <li><strong>Megbízhatóság:</strong> A vákuumcsövek gyakori meghibásodásai miatt ezek a gépek megbízhatatlanok voltak, és gyakran karbantartást igényeltek.</li>
+          <li><strong>Programozás:</strong> Az első generációs számítógépeket gépi nyelven programozták, ami időigényes és bonyolult folyamat volt. A programokat általában lyukkártyákon vagy papírszalagokon tárolták.</li>
         </ul>
 
         <h3>Az első generáció jelentősége</h3>
@@ -119,10 +119,10 @@
         <p>A Neumann-elvek négy fő koncepcióra épülnek, amelyek ma is alapvetőek a számítógépek működésében:</p>
 
         <ol>
-          <li>Tárolt program elve: A számítógép programjait és adatait ugyanabban a memóriában tárolják. Ez az elv forradalmi volt, mivel a korábbi gépekben a programokat külön vezérlőmechanizmusokkal kellett irányítani. A tárolt program elve tette lehetővé, hogy a számítógépek rugalmasan végrehajthassanak különböző feladatokat egyszerűen azáltal, hogy különböző programokat töltöttek be ugyanabba a memóriába.</li>
-          <li>Kettes számrendszer használata: Neumann elveinek egyik alapja az volt, hogy a számítógépek kettes számrendszerben működjenek, azaz a számításokat 0 és 1 bitekkel végezzék. A kettes számrendszer használata jelentősen egyszerűsítette a hardvertervezést és a műveletek végrehajtását.</li>
-          <li>Centralizált vezérlés: Neumann szerint a számítógépnek rendelkeznie kell egy központi vezérlőegységgel (a mai értelemben vett processzorral), amely irányítja a gép működését, kezeli a műveletek sorrendjét, és biztosítja, hogy a programok megfelelően fussanak. Ez az elv alapozta meg a modern számítógépek CPU-jának (Central Processing Unit) kialakítását.</li>
-          <li>Soros utasításvégrehajtás: A programokat soros módon kell végrehajtani, azaz az utasításokat egymás után, egy adott sorrendben kell végrehajtani, amit a program határoz meg. Ez a lineáris utasításvégrehajtás elve tette lehetővé, hogy a számítógépek következetesen és megbízhatóan hajtsák végre a műveleteket.</li>
+          <li><strong>Tárolt program elve:</strong> A számítógép programjait és adatait ugyanabban a memóriában tárolják. Ez az elv forradalmi volt, mivel a korábbi gépekben a programokat külön vezérlőmechanizmusokkal kellett irányítani. A tárolt program elve tette lehetővé, hogy a számítógépek rugalmasan végrehajthassanak különböző feladatokat egyszerűen azáltal, hogy különböző programokat töltöttek be ugyanabba a memóriába.</li>
+          <li><strong>Kettes számrendszer használata:</strong> Neumann elveinek egyik alapja az volt, hogy a számítógépek kettes számrendszerben működjenek, azaz a számításokat 0 és 1 bitekkel végezzék. A kettes számrendszer használata jelentősen egyszerűsítette a hardvertervezést és a műveletek végrehajtását.</li>
+          <li><strong>Centralizált vezérlés:</strong> Neumann szerint a számítógépnek rendelkeznie kell egy központi vezérlőegységgel (a mai értelemben vett processzorral), amely irányítja a gép működését, kezeli a műveletek sorrendjét, és biztosítja, hogy a programok megfelelően fussanak. Ez az elv alapozta meg a modern számítógépek CPU-jának (Central Processing Unit) kialakítását.</li>
+          <li><strong>Soros utasításvégrehajtás:</strong> A programokat soros módon kell végrehajtani, azaz az utasításokat egymás után, egy adott sorrendben kell végrehajtani, amit a program határoz meg. Ez a lineáris utasításvégrehajtás elve tette lehetővé, hogy a számítógépek következetesen és megbízhatóan hajtsák végre a műveleteket.</li>
         </ol>
 
         <h3>Neumann János hatása és öröksége</h3>
@@ -147,9 +147,9 @@
         <p>Az első generációs számítógépek vákuumcsöveket használtak a számítások elvégzésére. Ezek a gépek hatalmasak és megbízhatatlanok voltak, hatalmas hőtermelésük miatt gyakran meghibásodtak. Az adatbevitel lyukkártyákon és papírszalagokon keresztül történt.</p>
         <p><strong>Fontosabb gépek:</strong></p>
         <ul>
-          <li>ENIAC (Electronic Numerical Integrator and Computer): Az első általános célú, elektronikus számítógép, amelyet az Egyesült Államokban fejlesztettek ki 1946-ban. Főként katonai célokra használták.</li>
-          <li>EDVAC (Electronic Discrete Variable Automatic Computer): Az első tárolt programú számítógép, amelyet 1951-ben fejeztek be, és amely már Neumann-elvek alapján működött.</li>
-          <li>UNIVAC I (Universal Automatic Computer I): Az első kereskedelmi forgalomban is kapható számítógép, amelyet 1951-ben mutattak be, és széles körben használtak üzleti és kormányzati alkalmazásokban.</li>
+          <li><strong>ENIAC</strong> (Electronic Numerical Integrator and Computer): Az első általános célú, elektronikus számítógép, amelyet az Egyesült Államokban fejlesztettek ki 1946-ban. Főként katonai célokra használták.</li>
+          <li><strong>EDVAC</strong> (Electronic Discrete Variable Automatic Computer): Az első tárolt programú számítógép, amelyet 1951-ben fejeztek be, és amely már Neumann-elvek alapján működött.</li>
+          <li><strong>UNIVAC I</strong> (Universal Automatic Computer I): Az első kereskedelmi forgalomban is kapható számítógép, amelyet 1951-ben mutattak be, és széles körben használtak üzleti és kormányzati alkalmazásokban.</li>
         </ul>
 
         <p><a href="https://sg.hu/cikkek/43187/az_eniac_szuletesene" target="_blank">Az ENIAC születésének igaz története</a></p>
@@ -160,9 +160,9 @@
         <p>A második generációs számítógépekben a vákuumcsöveket tranzisztorokkal helyettesítették, ami jelentősen csökkentette a gépek méretét, hőtermelését és növelte megbízhatóságukat. A tranzisztorok gyorsabbak és hatékonyabbak voltak, mint a vákuumcsövek, és lehetővé tették a kompaktabb gépek létrehozását.</p>
         <p><strong>Fontosabb gépek:</strong></p>
         <ul>
-          <li>IBM 1401: Az IBM egyik legnépszerűbb második generációs számítógépe, amelyet 1959-ben mutattak be. Üzleti és tudományos célokra használták világszerte.</li>
-          <li>IBM 7090: Az 1959-ben bemutatott számítógép az IBM 709 tranzisztoros változata, amelyet főként tudományos és mérnöki számításokra használtak.</li>
-          <li>PDP-1 (Programmed Data Processor-1): A Digital Equipment Corporation (DEC) által 1959-ben bemutatott gép, amely a miniszámítógépek első képviselője volt, és nagy hatással volt a számítógépek szélesebb körben való elterjedésére.</li>
+          <li><strong>IBM 1401:</strong> Az IBM egyik legnépszerűbb második generációs számítógépe, amelyet 1959-ben mutattak be. Üzleti és tudományos célokra használták világszerte.</li>
+          <li><strong>IBM 7090:</strong> Az 1959-ben bemutatott számítógép az IBM 709 tranzisztoros változata, amelyet főként tudományos és mérnöki számításokra használtak.</li>
+          <li><strong>PDP-1</strong> (Programmed Data Processor-1): A Digital Equipment Corporation (DEC) által 1959-ben bemutatott gép, amely a miniszámítógépek első képviselője volt, és nagy hatással volt a számítógépek szélesebb körben való elterjedésére.</li>
         </ul>
 
         <h3>Harmadik generáció (1960-as évek közepe - 1970-es évek közepe)</h3>
@@ -171,9 +171,9 @@
         <p>A harmadik generációs számítógépekben már integrált áramköröket (IC-ket) alkalmaztak, amelyek több ezer tranzisztort tartalmaztak egyetlen szilíciumlapkán. Ez a technológia tovább csökkentette a számítógépek méretét, növelte a sebességüket, és még megbízhatóbbá tette őket.</p>
         <p><strong>Fontosabb gépek:</strong></p>
         <ul>
-          <li>IBM System/360: Az IBM által 1964-ben bemutatott számítógépcsalád, amely az első általános célú, széles körben elterjedt számítógép-rendszer volt, különféle alkalmazási területekre.</li>
-          <li>PDP-8: A DEC által 1965-ben bemutatott miniszámítógép, amely az első széles körben használt miniszámítógép volt, és nagy hatással volt az oktatásra és a kutatásra.</li>
-          <li>UNIVAC 1108: Az UNIVAC harmadik generációs gépe, amelyet 1964-ben mutattak be, és amelyet tudományos és mérnöki alkalmazásokra terveztek.</li>
+          <li><strong>IBM System/360:</strong> Az IBM által 1964-ben bemutatott számítógépcsalád, amely az első általános célú, széles körben elterjedt számítógép-rendszer volt, különféle alkalmazási területekre.</li>
+          <li><strong>PDP-8:</strong> A DEC által 1965-ben bemutatott miniszámítógép, amely az első széles körben használt miniszámítógép volt, és nagy hatással volt az oktatásra és a kutatásra.</li>
+          <li><strong>UNIVAC 1108:</strong> Az UNIVAC harmadik generációs gépe, amelyet 1964-ben mutattak be, és amelyet tudományos és mérnöki alkalmazásokra terveztek.</li>
         </ul>
 
         <h3>Negyedik generáció (1970-es évek közepe - napjainkig)</h3>
@@ -182,10 +182,10 @@
         <p>A negyedik generációs számítógépek mikroprocesszorokra épülnek, amelyek egyetlen integrált áramkörben tartalmazzák a központi feldolgozóegységet (CPU). Ez a technológia tette lehetővé a személyi számítógépek és hordozható eszközök megjelenését.</p>
         <p><strong>Fontosabb gépek:</strong></p>
         <ul>
-          <li>Intel 4004: Az első kereskedelmi mikroprocesszor, amelyet az Intel 1971-ben fejlesztett ki. Ez volt az első lépés a mikroprocesszor-alapú számítógépek felé.</li>
-          <li>Altair 8800: Az 1975-ben bemutatott személyi számítógép, amely az első mikroprocesszoros gép volt, és amelyet széles körben elérhetővé tettek a fogyasztók számára.</li>
-          <li>Apple II: Az Apple által 1977-ben piacra dobott személyi számítógép, amely nagyban hozzájárult a PC-piac fellendüléséhez.</li>
-          <li>IBM PC (IBM Personal Computer): Az 1981-ben bemutatott IBM PC volt az első széles körben elterjedt személyi számítógép, amely az MS-DOS operációs rendszerrel működött, és szabvánnyá vált az iparban.</li>
+          <li><strong>Intel 4004:</strong> Az első kereskedelmi mikroprocesszor, amelyet az Intel 1971-ben fejlesztett ki. Ez volt az első lépés a mikroprocesszor-alapú számítógépek felé.</li>
+          <li><strong>Altair 8800:</strong> Az 1975-ben bemutatott személyi számítógép, amely az első mikroprocesszoros gép volt, és amelyet széles körben elérhetővé tettek a fogyasztók számára.</li>
+          <li><strong>Apple II:</strong> Az Apple által 1977-ben piacra dobott személyi számítógép, amely nagyban hozzájárult a PC-piac fellendüléséhez.</li>
+          <li><strong>IBM PC</strong> (IBM Personal Computer): Az 1981-ben bemutatott IBM PC volt az első széles körben elterjedt személyi számítógép, amely az MS-DOS operációs rendszerrel működött, és szabvánnyá vált az iparban.</li>
         </ul>
 
         <h3>Ötödik generáció (1980-as évek - jövő)</h3>
@@ -194,8 +194,8 @@
         <p>Az ötödik generációs számítógépek a mesterséges intelligencia és a párhuzamos feldolgozás területén hoztak jelentős előrelépést. A cél az, hogy olyan gépeket hozzanak létre, amelyek képesek önálló tanulásra, döntéshozatalra és természetes nyelvi kommunikációra.</p>
         <p><strong>Fontosabb fejlesztések:</strong></p>
         <ul>
-          <li>Japán ötödik generációs számítógép projekt: Az 1980-as években Japánban indult projekt célja olyan gépek fejlesztése volt, amelyek mesterséges intelligenciával és párhuzamos feldolgozással működnek. Bár a projekt nem hozta meg a várt áttörést, jelentős kutatásokat indított el.</li>
-          <li>Kvantumszámítógépek: A kvantumszámítógépek, amelyek a kvantummechanikai jelenségeket használják fel a számításokhoz, még fejlesztés alatt állnak, de az ötödik generáció kulcsfontosságú szereplői lehetnek.</li>
+          <li><strong>Japán ötödik generációs számítógép projekt:</strong> Az 1980-as években Japánban indult projekt célja olyan gépek fejlesztése volt, amelyek mesterséges intelligenciával és párhuzamos feldolgozással működnek. Bár a projekt nem hozta meg a várt áttörést, jelentős kutatásokat indított el.</li>
+          <li><strong>Kvantumszámítógépek:</strong> A kvantumszámítógépek, amelyek a kvantummechanikai jelenségeket használják fel a számításokhoz, még fejlesztés alatt állnak, de az ötödik generáció kulcsfontosságú szereplői lehetnek.</li>
         </ul>
 
         <h3>Hatodik generáció (jövő)</h3>
@@ -256,9 +256,9 @@
         <p><strong>Modern szuperszámítógépek</strong></p>
 
         <ul>
-          <li>Fugaku (Japán): 2020 óta a Fugaku a világ leggyorsabb szuperszámítógépe, amelyet a japán RIKEN és a Fujitsu fejlesztett ki. Eléri az 442 petaflopsos csúcsteljesítményt.</li>
-          <li>Summit (USA): Az IBM által kifejlesztett gép 200 petaflopsos teljesítményével sokáig a világ leggyorsabb szuperszámítógépe volt, és számos tudományos kutatási projekt alapját képezi.</li>
-          <li>Sunway TaihuLight (Kína): Ez a gép egy másik kiemelkedő példa a modern szuperszámítógépekre, amely 125 petaflopsos csúcsteljesítményre képes, és a kínai Nemzeti Szuperszámítógépes Központ üzemelteti.</li>
+          <li><strong>Fugaku</strong> (Japán): 2020 óta a Fugaku a világ leggyorsabb szuperszámítógépe, amelyet a japán RIKEN és a Fujitsu fejlesztett ki. Eléri az 442 petaflopsos csúcsteljesítményt.</li>
+          <li><strong>Summit</strong> (USA): Az IBM által kifejlesztett gép 200 petaflopsos teljesítményével sokáig a világ leggyorsabb szuperszámítógépe volt, és számos tudományos kutatási projekt alapját képezi.</li>
+          <li><strong>Sunway TaihuLight</strong> (Kína): Ez a gép egy másik kiemelkedő példa a modern szuperszámítógépekre, amely 125 petaflopsos csúcsteljesítményre képes, és a kínai Nemzeti Szuperszámítógépes Központ üzemelteti.</li>
         </ul>
 
         <h3>Összegzés</h3>
