--- a/1-italapok/tarcirc.html
+++ b/1-italapok/tarcirc.html
@@ -45,6 +45,7 @@
         <ul id="t">
           <li><a href="#tar">Adattárolás a számítógépben</a></li>
           <li><a href="#lyuk">De mik azok a lyukkártyák?</a></li>
+          <li><a href="#korai">Korai elektronikus memóriák</a></li>
           <li><a href="#tcirc">Tároló áramkörök</a></li>
           <li><a href="#ram">RAM (Random Access Memory)</a></li>
           <li><a href="#rom">ROM (Read-Only Memory)</a></li>
@@ -77,9 +78,50 @@
 
         <p>A lyukkártyák, Jacquard szövőszéke, Babbage analitikai gépe, és Hollerith adatfeldolgozó gépe mind jelentős lépéseket képviseltek a technológiai fejlődésben, különösen a számítógépes vezérlés és adatfeldolgozás területén. A lyukkártyás vezérlés lehetővé tette a bonyolult adatfeldolgozási és programozási feladatok automatizálását, ami alapvető fontosságú volt a modern számítógépes rendszerek kifejlesztésében.</p>
 
+        <h1 id="korai">Korai elektronikus memóriák</h1>
+
+        <p>A <strong>forgódobos memória</strong> és a <strong>ferritgyűrűs memória</strong> két korai típusú számítógépes memóriatechnológia, amelyek a számítástechnika történetének fontos lépcsőfokai voltak.</p>
+
+        <h3>Forgódobos memória</h3>
+
+        <p>A forgódobos memória egy korai tárolási technológia volt, amelyet az 1940-es évek végén és az 1950-es évek elején fejlesztettek ki. Ez a technológia meglehetősen hasonlított a modern merevlemezekhez, de a célja inkább az volt, hogy a számítógép számára rövidtávú, gyors elérést biztosító memóriát biztosítson.</p>
+
+        <p><strong>Működési elv</strong></p>
+
+        <p>A forgódobos memória lényege egy gyorsan forgó henger (dob), amelynek felületét mágnesezhető anyaggal vonták be. A dob felületén adatok tárolására alkalmas sávok voltak kialakítva. Az adatok olvasása és írása elektromágneses fejek segítségével történt, amelyek a dob felületéhez közel helyezkedtek el. A forgódobos memória működése során a dob folyamatosan forgott, és amikor az írási/olvasási fej az adott adatsáv fölé került, az adatot rögzíteni vagy kiolvasni lehetett.</p>
+
+        <p><strong>Jellemzők és hátrányok</strong></p>
+
+        <ul>
+          <li><strong>Sebesség:</strong> Bár a forgódobos memória a maga idejében viszonylag gyorsnak számított, a mai modern memóriákhoz képest lassú volt, mivel az adatokhoz való hozzáférés ideje függött attól, hogy a fej mennyi idő alatt érte el a kívánt adatsávot.</li>
+          <li><strong>Kapacitás:</strong> A memória kapacitása korlátozott volt, és a gyártási technológia miatt csak néhány kilobájt (KB) adatot lehetett tárolni.</li>
+          <li><strong>Fizikai méret:</strong> A forgódobos memóriák nagyok és nehezek voltak, és mivel mozgó alkatrészeket tartalmaztak, hajlamosak voltak a mechanikai hibákra.</li>
+        </ul>
+
+        <h3>Ferritgyűrűs memória</h3>
+
+        <p>A ferritgyűrűs memória a forgódobos memóriát követte a számítógépek fejlődésében, és az 1950-es évek közepétől egészen az 1970-es évekig széles körben használták. Ez a technológia már jelentős előrelépést jelentett, és hosszú időre standard memóriatípussá vált a számítógépekben.</p>
+
+        <p><strong>Működési elv</strong></p>
+
+        <p>A ferritgyűrűs memória alapját apró, mágnesezhető ferritgyűrűk alkották, amelyek mátrixszerűen voltak elrendezve. Minden egyes gyűrű két állapotot (0 vagy 1) tudott tárolni, attól függően, hogy a mágnesezettség iránya milyen volt. Az adatok kiolvasása és írása úgy történt, hogy vezetéket fűztek át a gyűrűkön, és a gyűrű mágnesezési állapotának megváltoztatásával, illetve mérésével állították elő az adatokat.</p>
+
+        <p><strong>Jellemzők és előnyök</strong></p>
+
+        <ul>
+          <li><strong>Sebesség:</strong> A ferritgyűrűs memória már sokkal gyorsabb volt a forgódobos memóriánál, mivel az adatokhoz való hozzáférés nem függött mechanikus mozgástól.</li>
+          <li><strong>Megbízhatóság:</strong> Mivel nem tartalmazott mozgó alkatrészeket, a ferritgyűrűs memória sokkal megbízhatóbb volt, és kevésbé volt hajlamos a meghibásodásra.</li>
+          <li><strong>Kapacitás:</strong> Bár kezdetben a kapacitás nem volt jelentős, a technológia fejlődésével több kilobájtnyi, később megabájtnyi adat tárolására is alkalmas volt.</li>
+          <li><strong>Tartósság:</strong> A ferritgyűrűs memória nem volt volatilis, azaz áramkimaradás esetén is megőrizte az adatokat, ami nagy előny volt a korabeli számítógépes rendszerek számára.</li>
+        </ul>
+
+        <h3>Összegzés</h3>
+
+        <p>Mind a forgódobos memória, mind a ferritgyűrűs memória jelentős szerepet játszottak a számítástechnika fejlődésében. A forgódobos memória volt az első lépés a közvetlen elérésű memória irányába, míg a ferritgyűrűs memória az első igazán megbízható és gyors memóriatípus volt, amely lehetővé tette a modern számítógépes rendszerek további fejlődését.</p>
+
         <h1 id="tcirc">Tároló áramkörök</h1>
 
-        <p>A RAM (Random Access Memory) és a ROM (Read-Only Memory) két alapvető típusú memória, amelyek különböző funkciókat töltenek be a számítógépek és más elektronikus eszközök működésében. Bár mindkettő memória, szerepük és tulajdonságaik jelentősen eltérnek egymástól.</p>
+        <p>A <strong>RAM (Random Access Memory)</strong> és a <strong>ROM (Read-Only Memory)</strong> két alapvető típusú memória, amelyek különböző funkciókat töltenek be a számítógépek és más elektronikus eszközök működésében. Bár mindkettő memória, szerepük és tulajdonságaik jelentősen eltérnek egymástól.</p>
 
         <p><a href="https://drive.google.com/file/d/1i2G-29ALc-lVlISdQ0e6N7nT3_xPoIx6/view?usp=sharing" target=_blank>Máté István Zsolt: Memóriák és csatlakoztatásuk. A BIOS</a></p>
 
